docs(config): fix error

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to Eko Framework
+description: Get started building your Agent with Eko.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Get started building your Agent with Eko Framework!
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /docs/guides/example/
+    - text: QuickStart
+      link: /docs/guides/getting-started/quickstart
       icon: right-arrow
     - text: Read the Starlight docs
       link: https://starlight.astro.build
