docs(config): update typo

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,15 +3,15 @@ title: Welcome to Eko Framework
 description: Get started building your Agent with Eko.
 template: splash
 hero:
-  tagline: Get started building your Agent with Eko Framework!
+  tagline: Get started building your Agent with Eko Framework !
   image:
     file: ../../assets/houston.webp
   actions:
     - text: QuickStart
-      link: /docs/guides/getting-started/quickstart
+      link: /docs/getting-started/quickstart
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Read the Eko docs
+      link: https://eko.fellou.ai/docs/
       icon: external
       variant: minimal
 ---
