docs(structure): added link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,16 +21,16 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Next steps
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+	<Card title="Use Eko in Browser Extension" icon="extension">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Add new content" icon="add-document">
+	<Card title="Use Eko in Node.js" icon="node">
 		Add Markdown or MDX files to `src/content/docs` to create new pages.
 	</Card>
-	<Card title="Configure your site" icon="setting">
+	<Card title="Use Eko in Web" icon="internet">
 		Edit your `sidebar` and other config in `astro.config.mjs`.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
+	<Card title="Computer Use" icon="computer">
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
 </CardGrid>
