docs(structure): modify index read docs url

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       link: /docs/getting-started/quickstart
       icon: right-arrow
     - text: Read the Eko docs
-      link: https://eko.fellou.ai/docs/
+      link: /docs/getting-started/getting-started
       icon: external
       variant: minimal
 ---
