docs(structure): modify homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -18,19 +18,25 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Learn More
 
-<CardGrid stagger>
+<CardGrid>
 	<Card title="Use Eko in Browser Extension" icon="extension">
-		Edit `src/content/docs/index.mdx` to see this page change.
+		Learn more in [Browser use - Browser Extension](/docs/getting-started/browser-extension).
 	</Card>
 	<Card title="Use Eko in Node.js" icon="node">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+		Learn more in [Computer use - Node.js](/docs/getting-started/browser-extension).
 	</Card>
 	<Card title="Use Eko in Web" icon="internet">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+		Learn more in [Browser use - Web](/docs/getting-started/browser-extension).
 	</Card>
 	<Card title="Computer Use" icon="computer">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+		Learn more in [Computer use - Fellou](/docs/getting-started/browser-extension).
+	</Card>
+	<Card title="Architecture" icon="architecture">
+		Learn more in [Architecture](https://starlight.astro.build/).
+	</Card>
+	<Card title="Roadmap" icon="roadmap">
+		Learn more in [Roadmap](https://starlight.astro.build/).
 	</Card>
 </CardGrid>
