chore: update computer use to Use Eko in AI-Browser Fellou in homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -30,7 +30,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Use Eko in Web" icon="internet">
 		Learn more in [Browser use - Web](/docs/getting-started/browser-extension).
 	</Card>
-	<Card title="Computer Use" icon="computer">
+	<Card title="Use Eko in AI-Browser Fellou" icon="computer">
 		Learn more in [Computer use - Fellou](/docs/getting-started/browser-extension).
 	</Card>
 	<Card title="Architecture" icon="architecture">
