--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Welcome to Eko Framework
 description: Get started building your Agent with Eko.
 template: splash
 hero:
-  tagline: Get started building your Agent with Eko Framework !
+  tagline: Build Agent Workflows Easily with Natural Language
   image:
     file: ../../assets/houston.webp
   actions:
