--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome to Eko Framework
-description: Get started building your Agent with Eko.
+description: Build Agent Workflows Easily with Natural Language
 template: splash
 hero:
   tagline: Build Agent Workflows Easily with Natural Language
