docs(content): update links in docs index page
Updated the documentation links to point to the correct pages for
browser extension, Node.js usage, web usage, AI-Browser Fellou,
architecture, and roadmap sections.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,21 +22,21 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid>
 	<Card title="Use Eko in Browser Extension" icon="extension">
-		Learn more in [Browser use - Browser Extension](/docs/getting-started/browser-extension).
+		Learn more in [Browser use - Browser Extension](/docs/browseruse/browser-extension).
 	</Card>
 	<Card title="Use Eko in Node.js" icon="node">
-		Learn more in [Computer use - Node.js](/docs/getting-started/browser-extension).
+		Learn more in [Computer use - Node.js](/docs/computeruse/computer-node).
 	</Card>
 	<Card title="Use Eko in Web" icon="internet">
-		Learn more in [Browser use - Web](/docs/getting-started/browser-extension).
+		Learn more in [Browser use - Web](/docs/browseruse/browser-web).
 	</Card>
 	<Card title="Use Eko in AI-Browser Fellou" icon="computer">
-		Learn more in [Computer use - Fellou](/docs/getting-started/browser-extension).
+		Learn more in [Computer use - Fellou](/docs/computeruse/computer-fellou).
 	</Card>
 	<Card title="Architecture" icon="architecture">
-		Learn more in [Architecture](https://starlight.astro.build/).
+		Learn more in [Architecture](/docs/architecture/overview).
 	</Card>
 	<Card title="Roadmap" icon="roadmap">
-		Learn more in [Roadmap](https://starlight.astro.build/).
+		Learn more in [Roadmap](/docs/release/overview).
 	</Card>
 </CardGrid>
