--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Welcome to Eko Framework
-description: Build Agent Workflows Easily with Natural Language
+description: Build Agent Workflow Easily with Natural Language
 template: splash
 hero:
-  tagline: Build Agent Workflows Easily with Natural Language
+  tagline: Build Agent Workflow Easily with Natural Language
   image:
     file: ../../assets/houston.webp
   actions:
