fix: homepage arch overview link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -34,7 +34,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		Learn more in [Computer use - Fellou](/docs/computeruse/computer-fellou).
 	</Card>
 	<Card title="Architecture" icon="threads">
-		Learn more in [Architecture](/docs/architecture/overview).
+		Learn more in [Architecture](/docs/architecture).
 	</Card>
 	<Card title="Roadmap" icon="seti:todo">
 		Learn more in [Roadmap](/docs/release/overview).
