--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,16 +22,16 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid>
 	<Card title="Use Eko in Browser Extension" icon="puzzle">
-		Learn more in [Browser use - Browser Extension](/docs/browseruse/browser-extension).
+		Learn more in [Browser Use - Browser Extension](/docs/browseruse/browser-extension).
 	</Card>
 	<Card title="Use Eko in Node.js" icon="node">
-		Learn more in [Computer use - Node.js](/docs/computeruse/computer-node).
+		Learn more in [Computer Use - Node.js](/docs/computeruse/computer-node).
 	</Card>
 	<Card title="Use Eko in Web" icon="seti:react">
-		Learn more in [Browser use - Web](/docs/browseruse/browser-web).
+		Learn more in [Browser Use - Web](/docs/browseruse/browser-web).
 	</Card>
 	<Card title="Use Eko in AI-Browser Fellou" icon="laptop">
-		Learn more in [Computer use - Fellou](/docs/computeruse/computer-fellou).
+		Learn more in [Computer Use - Fellou](/docs/computeruse/computer-fellou).
 	</Card>
 	<Card title="Architecture" icon="threads">
 		Learn more in [Architecture](/docs/architecture).
