--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: Build Production-ready Agent Workflow with Natural Language
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/eko-colorful.png
   actions:
     - text: QuickStart
       link: /docs/getting-started/quickstart
