chore(Home): modify read docs to Eko Overview

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ hero:
     - text: QuickStart
       link: /docs/getting-started/quickstart
       icon: right-arrow
-    - text: Read the Eko docs
+    - text: Eko Overview
       link: /docs/getting-started/eko
       icon: external
       variant: minimal
