--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Welcome to Eko Framework
-description: Build Production-ready Agent Workflow with Natural Language
+description: Build Production-ready Agentic Workflow with Natural Language
 template: splash
 hero:
-  tagline: Build Production-ready Agent Workflow with Natural Language
+  tagline: Build Production-ready Agentic Workflow with Natural Language
   image:
     file: ../../assets/houston.webp
   actions:
