--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,10 +8,10 @@ hero:
     file: ../../assets/eko-colorful.png
   actions:
     - text: QuickStart
-      link: /docs/getting-started/quickstart
+      link: /docs/first-steps/quickstart
       icon: right-arrow
     - text: Eko Overview
-      link: /docs/getting-started/eko
+      link: /docs/first-steps/eko
       icon: external
       variant: minimal
 ---
