--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,10 +8,10 @@ hero:
     file: ../../assets/eko-colorful.png
   actions:
     - text: QuickStart
-      link: /docs/getting-started/quickstart
+      link: /getting-started/quickstart
       icon: right-arrow
     - text: Eko Overview
-      link: /docs/getting-started/eko
+      link: /getting-started/eko
       icon: external
       variant: minimal
 ---
@@ -22,21 +22,21 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid>
 	<Card title="Use Eko in Browser Extension" icon="puzzle">
-		Learn more in [Browser Use - Browser Extension](/docs/browseruse/browser-extension).
+		Learn more in [Browser Use - Browser Extension](/browseruse/browser-extension).
 	</Card>
 	<Card title="Use Eko in Node.js" icon="node">
-		Learn more in [Computer Use - Node.js](/docs/computeruse/computer-node).
+		Learn more in [Computer Use - Node.js](/computeruse/computer-node).
 	</Card>
 	<Card title="Use Eko in Web" icon="seti:react">
-		Learn more in [Browser Use - Web](/docs/browseruse/browser-web).
+		Learn more in [Browser Use - Web](/browseruse/browser-web).
 	</Card>
 	<Card title="Use Eko in AI-Browser Fellou" icon="laptop">
-		Learn more in [Computer Use - Fellou](/docs/computeruse/computer-fellou).
+		Learn more in [Computer Use - Fellou](/computeruse/computer-fellou).
 	</Card>
 	<Card title="Architecture" icon="threads">
-		Learn more in [Architecture](/docs/architecture).
+		Learn more in [Architecture](/architecture).
 	</Card>
 	<Card title="Roadmap" icon="seti:todo">
-		Learn more in [Roadmap](/docs/release/overview).
+		Learn more in [Roadmap](/release/overview).
 	</Card>
 </CardGrid>
